[gd_scene load_steps=8 format=3 uid="uid://bhcdx3h8xtn5"]

[ext_resource type="Script" uid="uid://y48wrseks5vu" path="res://addons/parley/stores/fact/fact_store_editor.gd" id="1_55agi"]
[ext_resource type="Texture2D" uid="uid://bmyblj8lm0jme" path="res://addons/parley/assets/Save.svg" id="2_irk8n"]
[ext_resource type="Texture2D" uid="uid://ct6iywe1qjuh3" path="res://addons/parley/assets/New.svg" id="3_kh15r"]
[ext_resource type="Texture2D" uid="uid://drrcpeyo5x1ih" path="res://addons/parley/assets/Warning.svg" id="3_rkmh7"]
[ext_resource type="Texture2D" uid="uid://cr4knibdm85n1" path="res://addons/parley/assets/Search.svg" id="4_bhutp"]
[ext_resource type="PackedScene" uid="uid://dlqqxs60xui5w" path="res://addons/parley/components/editor/resource_editor.tscn" id="4_kh15r"]
[ext_resource type="PackedScene" uid="uid://msdptt8ygebm" path="res://addons/parley/stores/register_store_modal.tscn" id="6_bhutp"]

[node name="FactStoreEditor" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_55agi")

[node name="FactStoreMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="FactStoreContainer" type="VBoxContainer" parent="FactStoreMarginContainer"]
layout_mode = 2

[node name="AvailableStoresContainer" type="HBoxContainer" parent="FactStoreMarginContainer/FactStoreContainer"]
layout_mode = 2

[node name="FactStore" parent="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer" instance=ExtResource("4_kh15r")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
key = "Fact Store"
base_type = "ParleyFactStore"

[node name="SaveFactStoreButton" type="Button" parent="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Save Fact Store."
icon = ExtResource("2_irk8n")
flat = true

[node name="InvalidFactStoreButton" type="Button" parent="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Invalid Fact Store because it does not contain a resource path, please rectify or create and register a new Fact Store."
icon = ExtResource("3_rkmh7")
flat = true

[node name="NewFactStoreButton" type="Button" parent="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create and register new Fact Store."
icon = ExtResource("3_kh15r")
flat = true

[node name="DialogueSequenceContainer" parent="FactStoreMarginContainer/FactStoreContainer" instance=ExtResource("4_kh15r")]
unique_name_in_owner = true
layout_mode = 2
key = "Dialogue Sequence"
base_type = "DialogueAst"

[node name="FilterFacts" type="LineEdit" parent="FactStoreMarginContainer/FactStoreContainer"]
layout_mode = 2
placeholder_text = "Filter Facts"
clear_button_enabled = true
right_icon = ExtResource("4_bhutp")

[node name="FactsScroll" type="ScrollContainer" parent="FactStoreMarginContainer/FactStoreContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FactsScrollContainer" type="VBoxContainer" parent="FactStoreMarginContainer/FactStoreContainer/FactsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FactsContainer" type="VBoxContainer" parent="FactStoreMarginContainer/FactStoreContainer/FactsScroll/FactsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="AddFactButton" type="Button" parent="FactStoreMarginContainer/FactStoreContainer/FactsScroll/FactsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add Fact to the currently selected store."
text = "Add Fact"

[node name="RegisterFactStoreModal" parent="." instance=ExtResource("6_bhutp")]
unique_name_in_owner = true
title = "Register Fact Store"
visible = false
type = 1

[connection signal="resource_changed" from="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer/FactStore" to="." method="_on_fact_store_resource_changed"]
[connection signal="pressed" from="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer/SaveFactStoreButton" to="." method="_on_save_fact_store_button_pressed"]
[connection signal="pressed" from="FactStoreMarginContainer/FactStoreContainer/AvailableStoresContainer/NewFactStoreButton" to="." method="_on_new_fact_store_button_pressed"]
[connection signal="resource_changed" from="FactStoreMarginContainer/FactStoreContainer/DialogueSequenceContainer" to="." method="_on_dialogue_sequence_container_resource_changed"]
[connection signal="resource_selected" from="FactStoreMarginContainer/FactStoreContainer/DialogueSequenceContainer" to="." method="_on_dialogue_sequence_container_resource_selected"]
[connection signal="text_changed" from="FactStoreMarginContainer/FactStoreContainer/FilterFacts" to="." method="_on_filter_facts_text_changed"]
[connection signal="pressed" from="FactStoreMarginContainer/FactStoreContainer/FactsScroll/FactsScrollContainer/AddFactButton" to="." method="_on_add_fact_button_pressed"]
[connection signal="store_registered" from="RegisterFactStoreModal" to="." method="_on_register_fact_store_modal_store_registered"]
